# NogadEngine

./: .clangd  .gitignore  develop.sh  gen_compile_commands.sh  meson.build  meson.options  shell.nix
prog/1stPartyLibs/dag/: meson.build
prog/1stPartyLibs/dag/include/vecmath/: dag_vecMath_pc_sse.h
prog/config/: meson.build
prog/daNetGame/: precompile.h
prog/daNetGameLibs/outdated_effects/render/: outdatedEffectsES.cpp.inl
prog/dagorInclude/: meson.build
prog/dagorInclude/include/anim/: dag_animKeyInterp.h
prog/dagorInclude/include/extensions/acl/: compressed_tracks.h
prog/dagorInclude/include/shaders/: dag_DebugPrimitivesVbuffer.h
prog/dagorInclude/include/supp/: dag_define_KRNLIMP.h
prog/dagorInclude/include/util/: dag_hashedKeyMap.h  dag_nameHashers.h  dag_oaHashNameMap.h
prog/dagorUtils/binPack2D/: meson.build
prog/dagorUtils/regExp/: meson.build
prog/dagorUtils/regExp/include/regExp/: regExp.h
prog/engine/anim/: meson.build
prog/engine/baseUtil/: fileMd5Validate.cpp  meson.build
prog/engine/coreUtil/: meson.build
prog/engine/drv/drv3d_vulkan/util/: backtrace.cpp
prog/engine/guiBase/: meson.build
prog/engine/ioSys/: lzmaDecIo.cpp  lzmaEnc.cpp  meson.build  vromfsLoad.cpp  zlibInline.h  zlibIo.cpp  zstdIo.cpp
prog/engine/ioSys/dataBlock/: blk_serialize.cpp
prog/engine/kernel/: meson.build
prog/engine/lib3d/: meson.build  regTexCreateTiff.cpp
prog/engine/lib3d/moc_avx/: meson.build
prog/engine/math/: mesh.cpp  meson.build
prog/engine/memory/: meson.build
prog/engine/osApiWrappers/: meson.build
prog/engine/perfMon/daProfiler/: daProfilerVSDump.cpp
prog/engine/scene/: meson.build
prog/engine/sceneRay/: meson.build
prog/engine/sharedInclude/: meson.build
prog/engine/startup/: meson.build
prog/engine/workCycle/: meson.build
prog/gameLibs/daECS/core/: template2.cpp
prog/gameLibs/profileEventsGUI/: profileEventsGUI.cpp
prog/gameLibs/publicInclude/daFx/: dafx.h
prog/gameLibs/soundSystem/internal/: pathHash.h
prog/samples/physTest/: meson.build  physTest.cpp
prog/tools/libTools/dagFileRW/: geomMeshHelper.cpp
prog/tools/libTools/shaderResBuilder/: globalVertexDataConnector.cpp
