stl = dependency('eastl')

sources = files(
    'critsec.cpp',
    'timedCritsec.cpp',
    'limBufWriter.cpp',
    'dbgStrFmt.cpp',
    'symHlp.cpp',
    'basePath.cpp',
    'basePathMgr.cpp',
    'namedMounts.cpp',
    'syncFileIo.cpp',
    'localCmp.cpp',
    'simplifyFname.cpp',
    'directoryService.cpp',
    'getRealFname.cpp',
    'wndProcComponent.cpp',
    'miscApi.cpp',
    'progGlobals.cpp',
    'setThreadName.cpp',
    'ip2str.cpp',
    'vromfs.cpp',
    'unicode.cpp',
    'cpuJobs.cpp',
    'threads.cpp',
    'fileIoErr.cpp',
    'events.cpp',
    'spinlock.cpp',
    'rwlock.cpp',
    'globalMutex.cpp',
    'sharedMem.cpp',
    'mmap.cpp',
    'virtualMem.cpp',
    'sockets.cpp',
    'wildcards.cpp',
    'findFilePosix.cpp',
    'shellExecute.cpp',
    'singleProcessChecker.cpp',
    'directoryWatch.cpp',
    'cpuFeatures.cpp',
)

static_library('osApiWrappers',
            sources : sources,
            cpp_args: [ 
                '-D_TARGET_STATIC_LIB=1',
                '-D__B_KERNEL_LIB',
                '-g',
                '-fstack-protector',
                '-include', 'memory/dag_memBase.h',
                '-Wno-invalid-offsetof',
                '-fexceptions',
                '-DDAGOR_EXCEPTIONS_ENABLED=1',
                '-fno-rtti',
            ],
            dependencies: [ dagorInclude, engineSharedInclude, stl, common_flags_dep ])